--- a/MoreResults.API.csproj
+++ b/MoreResults.API.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="bootstrap" Version="5.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.3.22175.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0-preview.3.22175.1">
       <PrivateAssets>all</PrivateAssets>
@@ -18,8 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Custom\" />
-    <Folder Include="Script\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
